This file documents the revision history for Perl extension Mojolicious.

2.63    2012-03-17 00:00:00
        - Improved documentation.

2.62    2012-03-17 00:00:00
        - Deprecated Mojolicious::Renderer->default_template_class in favor
          of Mojolicious::Renderer->classes.
        - Deprecated Mojolicious::Static->default_static_class in favor of
          Mojolicious::Static->classes.
        - Added options function to Mojolicious::Lite.
        - Added options method to Mojolicious::Routes.
        - Added options method to Mojo::UserAgent.
        - Added options_ok method to Test::Mojo.
        - Added o function to ojo.
        - Removed experimental status from Mojo::Cache.
        - Removed experimental status from Mojo::DOM::CSS.
        - Removed experimental status from Mojo::DOM::HTML.
        - Removed experimental status from Mojo::Server::Morbo.
        - Removed experimental status from Mojo::Transaction::WebSocket.
        - Removed experimental status from Mojo::UserAgent::Transactor.
        - Removed experimental status from Mojolicious::Command::cpanify.
        - Removed experimental status from upgrade event in
          Mojo::Transaction::HTTP.
        - Removed experimental status from t helper in
          Mojolicious::Plugin::TagHelpers.
        - Removed experimental status from current_route and url_with helpers
          in Mojolicious::Plugin::DefaultHelpers.
        - Removed experimental status from websocket function in
          Mojolicious::Lite.
        - Removed experimental status from cache attribute in
          Mojolicious::Renderer.
        - Removed experimental status from format attribute in
          Mojolicious::Routes::Pattern.
        - Removed experimental status from ca and local_address,
          request_timeout and transactor attributes in Mojo::UserAgent.
        - Removed experimental status from cache attribute in
          Mojolicious::Routes.