@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Mojolicious.
 
 2.63    2012-03-17 00:00:00
+        - Improved Mojolicious::Renderer performance significantly.
         - Improved documentation.
 
 2.62    2012-03-17 00:00:00
